--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": ">=8.1.0",
         "composer/installers": "*",
         "guzzlehttp/guzzle": "^7",
         "http-interop/http-factory-guzzle": "^1",
         "meilisearch/meilisearch-php": "^1.3",
         "ramsey/uuid": "^4.0",
-        "silverstripe/framework": "^4.0 || ^5.0"
+        "silverstripe/framework": "^4.0 || ^5.0 || ^6"
     },
     "autoload": {
         "psr-4": {
